@@ -102,14 +102,14 @@
 
         <contact.email>info@exist-db.org</contact.email>
 
-        <ant.version>1.10.17</ant.version>
+        <ant.version>1.10.16</ant.version>
         <apache.httpcomponents.version>4.5.14</apache.httpcomponents.version>
         <apache.httpcomponents.core.version>4.4.16</apache.httpcomponents.core.version>
         <apache.xmlrpc.version>5.0.0</apache.xmlrpc.version>
         <appassembler.version>2.1.0</appassembler.version>
         <aspectj.version>1.9.25.1</aspectj.version>
         <exquery.distribution.version>0.2.1</exquery.distribution.version>
-        <icu.version>59.1</icu.version>
+        <icu.version>76.1</icu.version>
         <izpack.version>5.2.5</izpack.version>
         <jansi.version>2.4.3</jansi.version>
         <jaxb.api.version>4.0.5</jaxb.api.version>
@@ -117,12 +117,12 @@
         <eclipse.angus-activation.version>2.0.3</eclipse.angus-activation.version>
         <jetty.version>12.0.16</jetty.version>
         <log4j.version>2.25.4</log4j.version>
-        <lucene.version>4.10.4</lucene.version>
+        <lucene.version>10.3.0</lucene.version>
         <milton.version>1.8.1.3</milton.version>
         <milton.servlet.version>1.8.1.3-jakarta-ee10</milton.servlet.version>
         <nekohtml.version>2.1.3</nekohtml.version>
         <htmlparser.version>1.4.16</htmlparser.version>
-        <saxon.version>9.9.1-8</saxon.version>
+        <saxon.version>12.5</saxon.version>
         <xmlresolver.version>6.0.21</xmlresolver.version>
         <xmlunit.version>2.11.0</xmlunit.version>
         <junit.version>4.13.2</junit.version>
@@ -504,6 +504,13 @@
                 <version>${milton.servlet.version}</version>
             </dependency>
 
+            <!-- Jackrabbit WebDAV (Jakarta EE 10 transformed) -->
+            <dependency>
+                <groupId>org.exist-db.thirdparty.org.apache.jackrabbit</groupId>
+                <artifactId>jackrabbit-webdav</artifactId>
+                <version>2.22.3-jakarta-ee10</version>
+            </dependency>
+
             <dependency>
                 <groupId>it.unimi.dsi</groupId>
                 <artifactId>fastutil</artifactId>
@@ -643,7 +650,7 @@
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
-                    <version>12.2.1</version>
+                    <version>12.2.0</version>
                     <configuration>
                         <dataDirectory>${user.home}/.dependency-check-data</dataDirectory>
                         <nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
@@ -863,7 +870,7 @@
                               However it can make it hard to diagnose problems if tests leak state; If you experience
                               such a problem you may want to set it to `false` whilst debugging -->
                         <reuseForks>true</reuseForks>
-                        <argLine>@{jacocoArgLine} --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED -Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                        <argLine>@{jacocoArgLine} --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Dfile.encoding=${project.build.sourceEncoding}</argLine>
                         <systemPropertyVariables>
                             <user.country>UK</user.country>
                             <user.language>en</user.language>
@@ -1452,6 +1459,44 @@
                                     <publicKeyring>${existdb.release.public-keyfile}</publicKeyring>
                                     <secretKeyring>${existdb.release.private-keyfile}</secretKeyring>
                                     <passphrase>${existdb.release.key.passphrase}</passphrase>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>onnx-model</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>download-onnx-model</id>
+                                <phase>generate-test-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <property name="onnx.model.dir" value="${user.home}/.m2/onnx-models/all-MiniLM-L6-v2"/>
+                                        <property name="onnx.target.dir" value="${project.basedir}/target/onnx-models/all-MiniLM-L6-v2"/>
+                                        <mkdir dir="${onnx.model.dir}"/>
+                                        <get src="https://huggingface.co/onnx-models/all-MiniLM-L6-v2-onnx/resolve/main/model.onnx"
+                                             dest="${onnx.model.dir}/model.onnx"
+                                             skipexisting="true"/>
+                                        <get src="https://huggingface.co/onnx-models/all-MiniLM-L6-v2-onnx/resolve/main/tokenizer.json"
+                                             dest="${onnx.model.dir}/tokenizer.json"
+                                             skipexisting="true"/>
+                                        <mkdir dir="${project.basedir}/target/onnx-models"/>
+                                        <copy todir="${onnx.target.dir}" overwrite="false">
+                                            <fileset dir="${onnx.model.dir}"/>
+                                        </copy>
+                                    </target>
                                 </configuration>
                             </execution>
                         </executions>
